Fixing menu button overlap

--- a/assets/styles/src/modules/_header.scss
+++ b/assets/styles/src/modules/_header.scss
@@ -194,7 +194,10 @@
 		display: table-cell;
 		margin: 0;
 		width: 100%;
-        @include rem('margin', 0, -12, 0, 0);
+        
+        @include min-width ( $iPadPortrait ) {
+            @include rem('margin', 0, -12, 0, 0);
+		}
 
 		@include min-width ( 580 ) {
 			float: left;
